--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </nav>
 
     <div class="banner" id="banner" parallax=true
-         style="background: url('/img/default.png') no-repeat center center;
+         style="background: url('https://pic3.zhimg.com/v2-455e0eaf8d04c60375db5f632480e3b3_r.jpg?source=1940ef5c') no-repeat center center;
            background-size: cover;">
       <div class="full-bg-img">
         <div class="mask flex-center" style="background-color: rgba(0, 0, 0, 0.3)">
